test/fail/missing-semi-prog.rnp
{ 1 }
---
TypeError: Expected void but got number
 --> fail/missing-semi-prog.rnp:1:1
  |
1 | { 1 }
  | ^^^^^ Expected void but got number
  |
